[package]
name = "small_os"
version = "0.1.0"
authors = ["Mayeul Fournial <mfournial@outlook.com>"]
edition = "2018"
publish = false

[package.metadata.bootimage]
default-target = "x86_64.json"

[dependencies]
bootloader = "0.3.12"
spin = "0.4.9"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]